--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -46,6 +46,7 @@
       .mrk-select-app {
         cursor: pointer;
         border-radius: 8px;
+        font-size: 18px;
         // background-color: $bg-200;
         // padding: 8px 20px;
         > i {
