--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -14,6 +14,7 @@ $bg-400: #9e9e9e;
 $bg-500: #f1f1f1;
 $bg-600: #ecedec;
 $bg-700: #212121;
+$bg-800: rgba(212, 212, 212, 0.9);
 
 $primary-100: #5b42f3; //主要颜色
 $primary-200: #4f46e5;
