工作台三级路由

--- a/src/layouts/admin/components/dropdown-user/index.scss
+++ b/src/layouts/admin/components/dropdown-user/index.scss
@@ -78,6 +78,10 @@
         }
         .dropdown-main-star {
           margin-top: 15px;
+          > :last-child {
+            font-size: 15px;
+            margin-left: 4px;
+          }
         }
       }
     }
