--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -22,8 +22,8 @@
     -ms-transform: translateZ(0);
     -o-transform: translateZ(0);
     backface-visibility: hidden; //解决ios上内容闪动的问题
-    -webkit-backdrop-filter: blur(30px);
-    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
     .header-content {
       padding: 0 25px;
       padding-right: 15px;
@@ -32,7 +32,7 @@
       justify-content: space-between;
       align-items: center;
       .mrk-logo {
-        height: 28px;
+        height: 24px;
         display: flex;
         align-items: center;
         img {
@@ -111,8 +111,10 @@
           filter: grayscale(100%) brightness(200%); //白
         }
       }
-      .mrk-select-app {
-        // background-color: $text-300;
+      .btn-box {
+        .space-line {
+          opacity: 0.2;
+        }
       }
     }
   }
