--- a/src/page/manage/index.scss
+++ b/src/page/manage/index.scss
@@ -1,63 +1,142 @@
+@import '@/styles/theme';
 .manage-container {
-  // width: 100%;
-  // height: 100%;
+  box-sizing: border-box;
+  min-height: calc(100vh - 65px);
   padding: 15px 25px;
   font-size: 16px;
-  main {
-    display: flex;
-    justify-content: space-between;
-    > div {
-      // height: 400px;
-      // width: 49%;
-      // width: 100%;
-      padding: 30px;
-      border-radius: 30px;
-      background: #ffffff;
-      &:first-child {
-        // padding-top: 56px;
-        // padding-bottom: 56px;
-        // padding-inline: 64px;
-        // color: #ffffff;
-        // background: linear-gradient(
-        //   135deg,
-        //   rgb(134, 140, 255) 0%,
-        //   rgb(67, 24, 255) 100%
-        // );
-        .home-title {
-          margin-bottom: 25px;
-          height: 25px;
+  position: relative;
+  aside {
+    box-sizing: border-box;
+    height: calc(100vh - 65px);
+    width: 75px;
+    padding: 10px;
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    nav {
+      border-radius: 10px;
+      height: 100%;
+      box-sizing: border-box;
+      background: transparent;
+      backface-visibility: hidden; //解决ios上内容闪动的问题
+      -webkit-backdrop-filter: blur(20px);
+      backdrop-filter: blur(20px);
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      align-items: center;
+      > div {
+        // background: pink;
+        padding: 10px;
+        margin-bottom: 18px;
+        border-radius: 14px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        > i {
+          font-size: 24px;
+        }
+      }
+      .aside-first {
+        background: linear-gradient(144deg, #5b42f3 50%, #00ddeb);
+        margin-bottom: 24px;
+        padding: 6px;
+        > img {
+          width: 30px;
+          filter: grayscale(100%) brightness(200%); //白
+        }
+      }
+
+      .aside-last {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
+        > div {
+          padding: 10px;
+          margin-bottom: 20px;
+          border-radius: 14px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+          &:last-child {
+            margin-bottom: 0;
+          }
+          > i {
+            font-size: 24px;
+          }
+        }
+        .space-line {
+          padding: 0;
+          width: 70%;
+          height: 1px;
+          background-color: #e8e8e8;
+        }
+      }
+      .aside-item-active {
+        opacity: 0.4;
+        transition: opacity 0.3s, background-color 0.3s;
+        &:hover {
+          opacity: 1;
+          background-color: $bg-200;
+        }
+        &.active {
+          opacity: 1;
+          background-color: $bg-200;
+          position: relative;
+
+          &::before {
+            content: '';
+            height: 60%;
+            width: 3px;
+            background: linear-gradient(180deg, #af40ff, #5b42f3 50%, #00ddeb);
+            border-radius: 10px;
+            position: absolute;
+            left: -10px;
+            /* 添加动画 */
+            animation-name: slideInLeft;
+            animation-duration: 0.5s;
+            animation-fill-mode: forwards;
+            /* 定义动画 */
+            @keyframes slideInLeft {
+              from {
+                transform: translateX(500%);
+              }
+              to {
+                transform: translateX(0);
+              }
+            }
+          }
         }
       }
     }
   }
-  section {
-    margin: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    > div {
-      width: 32%;
-      height: 200px;
-      background: #ffffff;
-      border-radius: 20px;
-      margin: 10px 0;
-    }
+  main {
+    margin-left: 65px;
   }
-  footer {
-    margin: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    > div {
-      height: 300px;
-      background: #ffffff;
-      border-radius: 20px;
-      margin: 10px;
-      &:first-child {
-        width: 45%;
+}
+
+// 黑暗模式
+.manage-container.dark-mode {
+  aside {
+    nav {
+      .aside-last {
+        .space-line {
+          opacity: 0.2;
+        }
       }
-      &:not(:nth-child(1)) {
-        flex: 1;
+      .aside-item-active {
+        &:hover {
+          background-color: $text-700;
+        }
+        &.active {
+          background-color: $text-700;
+        }
       }
     }
   }
