--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -33,3 +33,7 @@ $accent-500: #f89b29;
 $accent-600: #ff0f7b;
 $accent-700: #2d79f3;
 $accent-800: #ef4444;
+$accent-900: #10b981;
+
+$border-color-100: rgba(255, 255, 255, 0.1);
+$border-color-200: rgba(0, 0, 0, 0.1);
