--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -28,14 +28,14 @@
 }
 
 /* 文字单行省略号 */
-.sle {
+.single-omit {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 /* 文字多行省略号 */
-.mle {
+.multiple-omit {
   display: -webkit-box;
   overflow: hidden;
   -webkit-box-orient: vertical;
@@ -444,4 +444,11 @@ a.no-style {
       transform: translateX(0);
     }
   }
+}
+
+// 模拟app打开
+.click-app-box:active {
+  transform: scale(0.95);
+  opacity: 0.7;
+  transition: 100ms;
 }
