--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -7,6 +7,7 @@
     display: flex;
     gap: 20px;
     width: 100%;
+    margin-top: 10px;
     .knowledge-content-item {
       width: 25%;
       height: 110px;
