--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15,6 +15,7 @@ $bg-500: #f1f1f1;
 $bg-600: #ecedec;
 $bg-700: #212121;
 $bg-800: rgba(212, 212, 212, 0.9);
+$bg-900: #fafafc;
 
 $primary-100: #5b42f3; //主要颜色
 $primary-200: #4f46e5;
@@ -35,5 +36,4 @@ $accent-700: #2d79f3;
 $accent-800: #ef4444;
 $accent-900: #10b981;
 
-$border-color-100: rgba(255, 255, 255, 0.1);
-$border-color-200: rgba(0, 0, 0, 0.1);
+$border-color-100: #e8e8e8;
