--- a/src/page/manage/children/work-platform/index.scss
+++ b/src/page/manage/children/work-platform/index.scss
@@ -11,9 +11,9 @@
         border-radius: 10px;
         box-sizing: border-box;
         padding: 10px;
-        background-color: $bg-200;
-        // border: 1px solid $border-color-200;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+        background-color: $bg-100;
+        border: 1px solid $border-color-100;
+        // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
       }
     }
     .work-platform-main-card-header {
