--- a/src/page/manage/index.scss
+++ b/src/page/manage/index.scss
@@ -77,7 +77,7 @@
           padding: 0;
           width: 70%;
           height: 1px;
-          background-color: #e8e8e8;
+          background-color: $border-color-100;
         }
       }
       .aside-item-active {
@@ -127,8 +127,7 @@
     margin: 0 auto;
 
     > header {
-      padding: 10px 5px;
-      padding-right: 10px;
+      padding: 12px 0px;
       .manage-header-item-box {
         width: 100%;
         display: flex;
@@ -143,24 +142,6 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
           }
-        }
-        .manage-header-greeting {
-          font-size: 16px;
-          margin-left: 5px;
-        }
-        .manage-header-greeting-box {
-          min-width: 170px;
-          justify-content: right;
-        }
-        .space-line {
-          padding: 0;
-          width: 1px;
-          height: 15px;
-          background-color: #e8e8e8;
-        }
-        .manage-header-title {
-          font-size: 16px;
-          margin-left: 10px;
         }
       }
     }
@@ -196,9 +177,6 @@
           > i {
             background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
           }
-        }
-        .space-line {
-          opacity: 0.2;
         }
       }
     }
