--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.woff2?t=1705244728206') format('woff2'),
-       url('iconfont.woff?t=1705244728206') format('woff'),
-       url('iconfont.ttf?t=1705244728206') format('truetype');
+  src: url('iconfont.woff2?t=1705312354300') format('woff2'),
+       url('iconfont.woff?t=1705312354300') format('woff'),
+       url('iconfont.ttf?t=1705312354300') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-shuru:before {
+  content: "\e660";
 }
 
 .mr-yidongxuanze:before {
