--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -25,6 +25,7 @@ $primary-500: #00ddeb;
 $primary-600: #94cdf8;
 $primary-700: #94cdf8;
 $primary-800: #0093e9; //立方体颜色
+$primary-900: #94b5ff; //立方体颜色
 
 $accent-100: #f64d28; //强调颜色
 $accent-200: #006fff;
