--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -21,6 +21,11 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      cursor: pointer;
+      transition: border-color 0.1s ease;
+      &:hover {
+        border-color: $primary-900;
+      }
       // 媒体查询 <1000px
       @media screen and (max-width: 1000px) {
         width: calc(100% / 2 - 10px);
@@ -33,6 +38,7 @@
         justify-content: space-between;
         align-items: center;
         font-size: 14px;
+        position: relative;
 
         img {
           height: 24px;
@@ -40,10 +46,16 @@
         }
         > :first-child {
           font-weight: 600;
-          letter-spacing: 1px;
+          letter-spacing: 0.5px;
+          max-width: 80%;
         }
-        > :last-child {
+        .knowledge-item-header-edit {
           cursor: pointer;
+          padding: 12px;
+          position: absolute;
+          right: -12px;
+          top: -10px;
+          border-radius: 8px;
         }
       }
       .knowledge-item-content {
@@ -71,7 +83,7 @@
     }
   }
   .knowledge-footer {
-    margin-top: 30px;
+    margin: 30px 0;
     display: flex;
     justify-content: flex-end;
   }
