--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -1,96 +1,97 @@
 @import '@/styles/theme';
 .knowledge-container {
-  border-top: 1px solid rgba($border-color-100, 0.5);
+  // border-top: 1px solid rgba($border-color-100, 0.5);
   padding: 15px;
-
-  .knowledge-title {
-    margin-bottom: 20px;
-  }
-  .knowledge-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    width: 100%;
-    .knowledge-content-item {
-      width: calc(100% / 3 - 14px);
-      height: 120px;
-      box-sizing: border-box;
-      padding: 10px 12px;
-      border: 1px solid $border-color-100;
-      border-radius: 8px;
+  .knowledge-list {
+    .knowledge-list-title {
+      margin-bottom: 20px;
+    }
+    .knowledge-list-content {
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
-      transition: border-color 0.1s ease;
-      &:hover {
-        border-color: $primary-900;
-      }
-      // 媒体查询 <1000px
-      @media screen and (max-width: 1000px) {
-        width: calc(100% / 2 - 10px);
-      }
-      @media screen and (max-width: 768px) {
-        width: 100%;
-      }
-      .knowledge-item-header {
+      flex-wrap: wrap;
+      gap: 20px;
+      width: 100%;
+      .knowledge-content-item {
+        width: calc(100% / 3 - 14px);
+        height: 120px;
+        box-sizing: border-box;
+        padding: 10px 12px;
+        border: 1px solid $border-color-100;
+        border-radius: 8px;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
-        align-items: center;
-        font-size: 14px;
-        position: relative;
+        cursor: pointer;
+        transition: border-color 0.1s ease;
+        &:hover {
+          border-color: $primary-900;
+        }
+        // 媒体查询 <1000px
+        @media screen and (max-width: 1000px) {
+          width: calc(100% / 2 - 10px);
+        }
+        @media screen and (max-width: 768px) {
+          width: 100%;
+        }
+        .knowledge-item-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-size: 14px;
+          position: relative;
 
-        img {
-          height: 24px;
-          margin-right: 8px;
+          img {
+            height: 24px;
+            margin-right: 8px;
+          }
+          > :first-child {
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            max-width: 80%;
+          }
+          .knowledge-item-header-edit {
+            cursor: pointer;
+            padding: 12px;
+            position: absolute;
+            right: -12px;
+            top: -10px;
+            border-radius: 8px;
+          }
         }
-        > :first-child {
-          font-weight: 600;
-          letter-spacing: 0.5px;
-          max-width: 80%;
+        .knowledge-item-content {
+          font-size: 14px;
+          padding-left: 3px;
+          padding-right: 50px;
         }
-        .knowledge-item-header-edit {
-          cursor: pointer;
-          padding: 12px;
-          position: absolute;
-          right: -12px;
-          top: -10px;
-          border-radius: 8px;
+        .knowledge-item-footer {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-size: 14px;
+          opacity: 0.5;
+          i {
+            margin-right: 3px;
+          }
         }
       }
-      .knowledge-item-content {
-        font-size: 14px;
-        padding-left: 3px;
-        padding-right: 50px;
-      }
-      .knowledge-item-footer {
+      // 空
+      .knowledge-content-empty {
+        height: calc(100vh - 350px);
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        font-size: 14px;
-        opacity: 0.5;
-        i {
-          margin-right: 3px;
-        }
+        margin: 0 auto;
       }
     }
-    // 空
-    .knowledge-content-empty {
-      height: calc(100vh - 350px);
+    .knowledge-list-footer {
+      margin: 30px 0;
       display: flex;
-      align-items: center;
-      margin: 0 auto;
+      justify-content: flex-end;
     }
-  }
-  .knowledge-footer {
-    margin: 30px 0;
-    display: flex;
-    justify-content: flex-end;
   }
 }
 
-// 新建下拉
-.dropdown-box {
+// list-新建下拉
+.knowledge-list-dropdown-box {
   background-color: #ffffff;
   box-shadow: 0 6px 10px 0 rgba(33, 33, 33, 0.1);
   padding: 5px 5px;
@@ -115,9 +116,8 @@
     }
   }
 }
-
-// 弹框
-.mr-modal-title-box {
+// list-弹框-title
+.knowledge-list-modal-title {
   display: flex;
   align-items: center;
   > img {
