--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -92,7 +92,7 @@
 
 // list-新建下拉
 .knowledge-list-dropdown-box {
-  background-color: #ffffff;
+  background-color: $bg-100;
   box-shadow: 0 6px 10px 0 rgba(33, 33, 33, 0.1);
   padding: 5px 5px;
   margin-top: 5px;
