--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -1,10 +1,16 @@
 @import '@/styles/theme';
 .knowledge-container {
-  // border-top: 1px solid rgba($border-color-100, 0.5);
   padding: 15px;
+  position: relative;
+  .knowledge-title-bread {
+    position: absolute;
+    top: 20px;
+  }
   .knowledge-list {
     .knowledge-list-title {
       margin-bottom: 20px;
+      display: flex;
+      justify-content: flex-end;
     }
     .knowledge-list-content {
       display: flex;
