知识库详情

--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -94,6 +94,13 @@
       justify-content: flex-end;
     }
   }
+  .knowledge-detail {
+    .knowledge-detail-title {
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
 }
 
 // list-新建下拉
