--- a/src/components/BtnLogin/index.scss
+++ b/src/components/BtnLogin/index.scss
@@ -6,13 +6,13 @@
   border: 0;
   border-radius: 20px;
   color: $bg-100;
-  padding: 0.7em 1em;
+  padding: 0.6em 1em;
   background: $text-300;
   display: flex;
   // transition: background 0.2s;
   align-items: center;
   gap: 0.6em;
-  font-weight: bold;
+  // font-weight: bold;
   cursor: pointer;
 
   &:hover {
